# ic-canister-assets2

./: .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  rust-toolchain.toml
sources/: source.did
src/: business.rs  explore.rs  home.rs  http.rs  lib.rs  maintainable.rs  permissions.rs  stable.rs  types.rs
src/common/: did.rs
src/core/: delete.rs  download.rs  mod.rs  query.rs  types.rs  upload.rs
src/stable/: business.rs
src/stable/v000/: business.rs
src/stable/v001/: business.rs  types.rs
tests/: upload.rs
