[package]
name = "ic-canister-assets"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
candid = "0.9.3"           # 不能升级, 因为 ic-cdk 依赖的是 0.8 版本的
ic-cdk = "0.10.0"
ic-certified-map = "0.4.0"

# ic-canister-kit = { version = "0.1.7", features = ["all"] }
ic-canister-kit = { path = "../../../ic-canister-kit" }

serde = "1.0.159"
# serde_derive = "1.0.159"
# serde_cbor = "0.11.2"
# include-base64 = "0.1.0"
# sha2 = "0.10.6"
# crc32fast = "1.3.2"
# hex = "0.4.3"
# percent-encoding = "2.2.0"
# base64 = "0.21.0"
# regex = "1.6.0"

# ic-kit = "0.4.8"
# cap-sdk = "0.2.4"
# cap-sdk-core = "0.2.3"
