[package]
name = "ic-canister-assets"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
candid = "0.9.3"           # 不能升级, 因为 ic-cdk 依赖的是 0.8 版本的
ic-cdk = "0.10.0"
ic-certified-map = "0.4.0"

ic-canister-kit = { version = "0.2.0" }
# ic-canister-kit = { path = "../../../ic-canister-kit" }

serde = "1.0.159"
sha2 = "0.10.6"            # hash
hex = "0.4.3"
percent-encoding = "2.2.0" # 网络模块 解析请求
regex = "1.6.0"            # 网络模块 解析请求
# chrono = "0.4.26"          # ! 网络模块 解析时间 无法编译
