[package]
name = "ic-canister-assets"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
# ic-certified-map = "0.4.0" # 可信验证

serde = { version = "1", features = ["derive"] } # 序列化/反序列化框架
serde_json = "1"                                 # json

ic-canister-kit = { version = "1.0.4", features = ["call-once", "schedule"] }

strum = "0.26"
strum_macros = "0.26"

sha2 = "0.10"            # hash
hex = "0.4"
percent-encoding = "2.2" # 网络模块 解析请求
regex = "1.6"            # 网络模块 解析请求
# chrono = "0.4.26"          # ! 网络模块 解析时间 无法编译
